[project]
name = "automated-systematic-trading-and-risk-analysis"
version = "1.0.0"
description = "AI-driven automated stock trading system with risk analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Cache
    "redis>=5.0.0",
    "aioredis>=2.0.0",
    # Data Processing
    "pandas>=2.3.2",
    "numpy>=2.3.2",
    "scipy>=1.11.0",
    # Market Data
    "yfinance>=0.2.65",
    "yahooquery>=2.4.1",
    # Technical Analysis
    "ta-lib>=0.6.5",
    # Machine Learning
    "scikit-learn>=1.7.1",
    "stable-baselines3>=2.7.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "gymnasium>=1.2.0",
    # NLP
    "transformers>=4.55.4",
    "spacy>=3.8.7",
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
    # Web Scraping
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    # Social Media
    "tweepy>=4.16.0",
    # Visualization
    "matplotlib>=3.10.5",
    "plotly>=5.18.0",
    # Utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2023.3",
    # Excel
    "openpyxl>=3.1.5",
    # Security
    "cryptography>=45.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Monitoring
    "prometheus-client>=0.19.0",
    "psutil>=7.0.0",
    # Logging
    "vibelogger>=0.1.1",
    "structlog>=23.2.0",
    # Testing
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    # HTTP
    "requests>=2.32.5",
    "jquants-api-client>=0.0.1",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "ipython>=8.18.0",
    "jupyter>=1.0.0",
    "pre-commit>=3.6.0",
]
